# tangible_soundscape

./: Cargo.toml  README.md  rules-night.json  rules.json
src/: main.rs
stm32_figure_reader/: Cargo.toml  Makefile
stm32_figure_reader/.cargo/: config.toml.old
stm32_figure_reader/src/: main.rs
tangible_soundscape_common/: Cargo.toml
tangible_soundscape_common/examples/: mock.rs
tangible_soundscape_common/src/: lib.rs  rule.rs
tangible_soundscape_player/: Cargo.toml  rules-night.json  rules.json
tangible_soundscape_player/src/: main.rs
