[package]
name = "serial-noisemaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
rodio = "0.17.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serialport = "4.2.1"
